2006-07-30  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200609.tex: added notes on oprofile working
	on core duo CPU.

	* COPYING: update to newer GPL FSF address, and update all files
	to have a preamble.

2006-07-28  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200608.tex: create draft content.

2006-07-27  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200609.tex: move translation text from 200607

2006-07-26  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200607-presentation-english.tex: update

2006-07-25  Junichi Uekawa  <dancer@debian.org>

	* TODO: update content.

	* debianmeetingresume2006-natsu.tex: filled

2006-07-24  Junichi Uekawa  <dancer@debian.org>

	* image200607/openlogo-light.eps: edit color to be light as a background.

	* debianmeetingresume200608-presentation.tex: add logo

	* debianmeetingresume200607-presentation-english.tex: add logo

2006-07-23  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200607-presentation-english.tex: English version.

	* debianmeetingresume200607-presentation.tex (Units): add linux-uvc

	* debianmeetingresume200607.tex (PCI): add isight notes.

2006-07-19  Junichi Uekawa  <dancer@debian.org>

	* TODO: create a TODO list for future plans.

2006-07-17  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200608.tex: create

	* debianmeetingresume200609.tex: create

	* debianmeetingresume200610.tex: create

	* debianmeetingresume200612.tex: create

2006-07-14  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200607.tex: remove unneeded sections.

2006-07-13  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200607-presentation.tex: update

2006-07-12  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200607.tex: add presentation

2006-07-09  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200607.tex: add info on wlan.

2006-07-04  Junichi Uekawa  <dancer@debian.org>
