@@ -1,3 +1,7 @@
+2006-08-06  Junichi Uekawa  <dancer@debian.org>
+
+	* image200612/people-chart.py: read csv file
+
 2006-07-30  Junichi Uekawa  <dancer@debian.org>
 
 	* debianmeetingresume200609.tex: added notes on oprofile working
